IC-Prod/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Annual_Chemical_Spend__c</fullName>
        <description>Annual Chemical Spend.</description>
        <label>Annual Chemical Spend</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_1__c</fullName>
        <description>First Product&apos;s Annual Spend.</description>
        <label>Annual Spend ($) 1</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_2__c</fullName>
        <description>Second Product&apos;s Annual Spend</description>
        <label>Annual Spend ($) 2</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_3__c</fullName>
        <description>Third Product&apos;s Annual Spend in Dollars.</description>
        <label>Annual Spend ($) 3</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_lbs_vol_1__c</fullName>
        <description>First Product&apos;s Annual Pounds (volume)</description>
        <label>Annual lbs (vol.) 1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_lbs_vol_2__c</fullName>
        <description>Second Product&apos;s Annual Volume in Pounds.</description>
        <label>Annual lbs (vol.) 2</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_lbs_vol_3__c</fullName>
        <description>Third Product&apos;s Annual Volume in Pounds.</description>
        <label>Annual lbs (vol.) 3</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign related to the Lead</description>
        <inlineHelpText>Campaign related to the Lead</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <label>Comments 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <label>Comments 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments3__c</fullName>
        <label>Comments 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <description>D&amp;B&apos;s DUNS number.</description>
        <label>DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( LEN( FirstName )=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Title )=0, &quot;Title, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Phone )=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Email )=0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Street )=0, &quot;Street, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( City )=0, &quot;City, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( State )=0, &quot;State&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0, 15) + 
IF(LEN( Title ) = 0, 0, 10) + 
IF(LEN( Phone ) = 0, 0, 15) + 
IF(LEN( Email ) = 0, 0, 15) + 
IF(LEN( Street ) = 0, 0, 15) + 
IF(LEN( City ) = 0, 0, 15) + 
IF(LEN( State ) = 0, 0, 15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_Good_Mfg__c</fullName>
        <description>What are the finished goods that this company is manufacturing.</description>
        <label>Finished Good Mfg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ActivityType__c</fullName>
        <label>ActivityType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__InnovadexID__c</fullName>
        <externalId>true</externalId>
        <label>InnovadexID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntegratedCountryCode__c</fullName>
        <description>Populated by workflow and then for Lead conversion it&apos;s mapped to the same field on the Account --&gt; sets off account trigger that populates the Billing Country Code field correctly for non-US accounts.</description>
        <label>Integrated Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedCountry__c</fullName>
        <label>Integrated Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedStateCode__c</fullName>
        <description>Populated by workflow and then for Lead conversion it&apos;s mapped to the same field on the Account --&gt; sets off account trigger that populates the Billing State Code field correctly for non-US accounts.</description>
        <label>Integrated State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedState__c</fullName>
        <label>Integrated State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>DUNS Location Type</description>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>Customer&apos;s need.</description>
        <inlineHelpText>What is the customer&apos;s need, if they contacted us?</inlineHelpText>
        <label>Need</label>
        <picklist>
            <picklistValues>
                <fullName>General Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Question</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Type_1__c</fullName>
        <description>First Product&apos;s Package Type.</description>
        <label>Package Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Type_2__c</fullName>
        <description>Second Product&apos;s Package Type.</description>
        <label>Package Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Type_3__c</fullName>
        <description>Third Product&apos;s Package Type.</description>
        <label>Package Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Supplier__c</fullName>
        <description>Competing Supplier or Producer.</description>
        <label>Primary Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name_1__c</fullName>
        <description>First Product Name.</description>
        <label>Product Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_2__c</fullName>
        <description>Second Product&apos;s Name.</description>
        <label>Product Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_3__c</fullName>
        <description>Third Product&apos;s Name.</description>
        <label>Product Name 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC1__c</fullName>
        <description>8-digit SIC Code</description>
        <label>SIC Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipto__c</fullName>
        <label>Ship To</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic1Description__c</fullName>
        <description>This is used to translate the SIC Code number.</description>
        <label>SIC Code 1 Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_1__c</fullName>
        <description>First Product&apos;s Supplier</description>
        <label>Supplier 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_2__c</fullName>
        <description>Second Product&apos;s Supplier</description>
        <label>Supplier 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_3__c</fullName>
        <description>Third Product&apos;s Supplier</description>
        <label>Supplier 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEMPStateLength__c</fullName>
        <formula>LEN (State)</formula>
        <label>TEMPStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UICDescription__c</fullName>
        <description>Univar Industrial Classification.  This is the old SIC 4 Code Name.</description>
        <inlineHelpText>Univar Industrial Classification code.  Was the SIC Code 4 Name.</inlineHelpText>
        <label>UIC Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UIC__c</fullName>
        <description>Univar Industrial Classification.  This is the old SIC 4 Code.</description>
        <inlineHelpText>Univar Industrial Classification code. Was SIC Code 4</inlineHelpText>
        <label>UIC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateDUNSNumber__c</fullName>
        <description>D&amp;B Ultimate DUNS #.</description>
        <label>Ultimate DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateName__c</fullName>
        <description>D&amp;B&apos;s Ultimate DUNS Name.</description>
        <label>Ultimate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BDE_Leads_D_B</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>BDE Leads:D&amp;B</label>
        <language>en_US</language>
        <sharedTo>
            <group>MarketDevelopmentGroup</group>
            <group>ReportingMarketing</group>
            <role>BusinessDevelopmentExecutive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSR_Leads_Pilot</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>iejy7,iew3r,ieaxh</value>
        </filters>
        <label>CSR Leads - Pilot</label>
        <language>en_US</language>
        <sharedTo>
            <group>MarketDevelopmentGroup</group>
            <roleAndSubordinates>MarketDevelopmentManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaign_Program_Direct_2_Market</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>Location_Type__c</columns>
        <columns>SIC1__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign:Program:Direct 2 Market</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>MarketDevelopers</roleAndSubordinates>
            <roleAndSubordinates>MarketDevelopmentManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaign_Program_Direct_2_Market1</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>SIC1__c</columns>
        <columns>Location_Type__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>LEAD.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>NE,IA,SD,KS</value>
        </filters>
        <label>Campaign:Program:Direct 2 Market-Omaha</label>
        <language>en_US</language>
        <sharedTo>
            <group>AllIndustryManagers</group>
            <roleAndSubordinates>MarketDevelopers</roleAndSubordinates>
            <roleAndSubordinates>MarketDevelopmentManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CampignWebtoLead</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CONVERTED</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <label>Program: Univar Website - LEADS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>GlobalExecutives</roleAndSubordinates>
            <roleAndSubordinates>MarketDevelopers</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Innovadex_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Innovadex</value>
        </filters>
        <label>Innovadex Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Innovadex_Leads1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Innovadex</value>
        </filters>
        <label>Innovadex Website: Leads to Convert</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LEADS_PHARMA_East_Coast_D2M_Qualifying</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>SIC1__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIC1__c</field>
            <operation>equals</operation>
            <value>2834</value>
        </filters>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>MA,RI,PA,NY,NJ,MD</value>
        </filters>
        <label>LEADS:PHARMA-East Coast - Unqualified</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>MarketDevelopmentManager</roleAndSubordinates>
            <roleAndSubordinates>VPNewBusinessDevelopment</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_this_week</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Leads this week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_DEF_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>SIC1__c</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted,Open,Qualified</value>
        </filters>
        <label>My DEF Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BusinessDevelopmentExecutive</role>
        </sharedTo>
    </listViews>
</CustomObject>